# sc-utils

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/cellstate_aligner/: __init__.py  align.py
src/sc_utils/: __init__.py  align.py
tests/: test_smoke.py
