[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sc-utils"
version = "0.1.0"
description = "Utilities for single-cell analysis (alignment, plotting, label transfer, etc.)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["single-cell", "scanpy", "alignment", "bioinformatics"]

dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.10",
  "scikit-learn>=1.1",
  "scanpy>=1.9",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
plot = ["seaborn>=0.12"]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.6", "black>=24.3", "pre-commit>=3.5"]

[project.urls]
Homepage = "https://github.com/SamuelAMiller1/sc-utils"
Issues = "https://github.com/SamuelAMiller1/sc-utils/issues"

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
packages = ["src/sc_utils"]

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP"]

[tool.black]
line-length = 100
